# api/swagger/swagger.yaml
@@ -302,26 +302,29 @@ paths:
         in: query
         type: string
         description: Filter by monitor.
+        required: true
       - name: metric
         in: query
         type: string
         description: Filter by metric.
+        required: true
       - name: begin
         in: query
-        type: integer
-        format: int64
+        type: string
         description: Where does the query start from.
+        required: true
       - name: end
         in: query
-        type: integer
-        format: int64
+        type: string
         description: Where does the query end.
+        required: true
       - name: limit
         in: query
-        type: integer
-        format: int64
+        type: string
         description: 'Number of items to retrieve. Default is 5, maximum is 100.'
+        required: true
     get:
+      operationId: findDataSet
       summary: Monitor activity
       description: "The User Activity endpoint returns data about a user's lifetime activity with Uber. The response will include pickup locations and times, dropoff locations and times, the distance of past requests, and information about which products were requested.<br><br>The history array in the response will have a maximum length based on the limit parameter. The response value count may exceed limit, therefore subsequent API requests may be necessary."
       tags:
